Fixed buttons breaking on mobile

--- a/styles/partials/buttons.scss
+++ b/styles/partials/buttons.scss
@@ -9,7 +9,7 @@ button, .button {
   color: $gray-6;
   cursor: pointer;
   border: 2px solid;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   letter-spacing: 0.05rem;
   line-height: 0;
   list-style-type: none;
@@ -17,6 +17,7 @@ button, .button {
   padding: 1rem 0.8rem;
   text-transform: uppercase;
   transition: all 0.15s ease 0s;
+  @media #{$tablet} { font-size: 0.9rem; }
 
   &:active {
     -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.15);
