--- a/styles/partials/core.scss
+++ b/styles/partials/core.scss
@@ -125,11 +125,12 @@ header {
 }
 
 section {
-  padding: 1rem;
+  padding: 1rem 0.5rem;
   &.section-blue { background-color: $blue; }
   &.section-green { background-color: $green; }
   &.section-orange { background-color: $orange; }
   &.section-red { background-color: $red; }
+  @media #{$tablet} { padding: 1rem }
   @media #{$desktop} {
     &.section-blue,
     &.section-green,
