--- a/styles/style.css
+++ b/styles/style.css
@@ -201,7 +201,7 @@ header {
         padding: 0 1rem; } }
 
 section {
-  padding: 1rem; }
+  padding: 1rem 0.5rem; }
   section.section-blue {
     background-color: #4FA7C2; }
   section.section-green {
@@ -210,6 +210,9 @@ section {
     background-color: #E09050; }
   section.section-red {
     background-color: #BD6961; }
+  @media all and (min-width: 40em) {
+    section {
+      padding: 1rem; } }
   @media all and (min-width: 64em) {
     section.section-blue, section.section-green, section.section-orange, section.section-red {
       background-color: transparent; } }
@@ -357,7 +360,7 @@ button, .button {
   color: #A09E9E;
   cursor: pointer;
   border: 2px solid;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   letter-spacing: 0.05rem;
   line-height: 0;
   list-style-type: none;
@@ -365,6 +368,9 @@ button, .button {
   padding: 1rem 0.8rem;
   text-transform: uppercase;
   transition: all 0.15s ease 0s; }
+  @media all and (min-width: 40em) {
+    button, .button {
+      font-size: 0.9rem; } }
   button:active, .button:active {
     -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.15);
